# CNML

./: .gitignore  .gitmodules  CMakeLists.txt  CNML.code-workspace  NML.code-workspace  lowcmake  readme.md
.VSCodeCounter/2024-05-17_15-04-53/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
doc/: 2D.md  Find_Root_In_Univariate_Polynomials.md  Geometry.md  Geometry_2D.md  Linear_Algebra.md  Link_Block.md  Transform_Matrix_2D.md  bezier.md
src/: NML.cpp  NML.h  NML.hpp  NML_Algebra.cpp  NML_Algebra.hpp  NML_Bezier.cpp  NML_Bezier.hpp  NML_Define.hpp  NML_Euler_Angle.cpp  NML_Euler_Angle.hpp  NML_Geometry.cpp  NML_Geometry.hpp  NML_Geometry_2D.cpp  NML_Geometry_2D.hpp  NML_Geometry_2D_Primitives_2D.cpp  NML_Geometry_2D_Primitives_2D.hpp  NML_Link_Block.cpp  NML_Link_Block.hpp  NML_Matrix.cpp  NML_Matrix.hpp  NML_Matrix_2D.cpp  NML_Matrix_2D.hpp  NML_Matrix_3D.cpp  NML_Matrix_3D.hpp  NML_Mesh.hpp  NML_Polygon__2D.hpp  NML_Primitives_2D.cpp  NML_Primitives_2D.hpp  NML_Primitives_3D.cpp  NML_Primitives_3D.hpp  NML_Quaternion.cpp  NML_Quaternion.hpp  NML_Rotate.hpp  NML_Transform_Action.cpp  NML_Transform_Action.hpp  NML_Vector.cpp  NML_Vector.hpp  Vector.cpp  main.cpp  test.cpp  (+2 more)
src/Algebra/: NML_Algebra.cpp  NML_Algebra.hpp  NML_Matrix.cpp  NML_Matrix.hpp  NML_Vector.cpp  NML_Vector.hpp  test.cpp
src/CNML/head/: Vector.h
src/Geometry/: NML_Bezier.cpp  NML_Bezier.hpp  NML_Geometry.cpp  NML_Geometry.hpp  NML_Transform_Action.cpp  NML_Transform_Action.hpp  test.cpp
src/Geometry_2D/: NML_Bezier_2D.cpp  NML_Bezier_2D.hpp  NML_Geometry_2D.cpp  NML_Geometry_2D.hpp  NML_Geometry_2D_Primitive.cpp  NML_Geometry_2D_Primitive.hpp  NML_Geometry_2D_Primitives.cpp  NML_Geometry_2D_Primitives.hpp  NML_Geometry_2D_Primitives_2D.cpp  NML_Geometry_2D_Primitives_2D.hpp  NML_Matrix_2D.cpp  NML_Matrix_2D.hpp  NML_Path_2D.cpp  NML_Path_2D.hpp  test.cpp
src/Geometry_3D/: NML_Euler_Angle.hpp  NML_Geometry_3D_Primitive.cpp  NML_Geometry_3D_Primitive.hpp  NML_Geometry_3D_Primitives.cpp  NML_Geometry_3D_Primitives.hpp  NML_Matrix_3D.cpp  NML_Matrix_3D.hpp  NML_Primitives_3D.cpp  NML_Primitives_3D.hpp  NML_Quaternion.cpp  NML_Quaternion.hpp
src/Link_Block/: NML_Link_Block.cpp  NML_Link_Block.hpp  test.cpp
src/NML/: NML.h
src/NML/cpp/: Vector.cpp
test/: test.cpp  test_g2d.cpp
test_doc/: basics.css  test__matrix_2d.html  test__matrix_3d.html
